<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aruco_detector</name>
  <version>0.0.0</version>
  <description>Package created in ROS2 for Approximate Object Location and Tracking with UAVs Quad-copter</description>
  <maintainer email="maryjandria@gmail.com">rmitaiil</maintainer>
  <license>RMIT University AIIL Lab</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualisation_msgs</depend>
  <depend>vision_opencv</depend>
  <depend>opencv-python</depend>
  <depend>cv_bridge</depend>

  <depend>image_transport</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <author email="maryjandria@gmail.com">Andria Nicholas</author>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
